checking in bug 101018 for paper@animecity.nu.  r=pavlov sr=tor@acm.org.